9.monitorings/monitor-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: prometheus-ingress
  namespace: default 
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec: 
  ingressClassName: "nginx"
  tls: 
    - hosts: 
      #- prometheus.devnerd.store
      - grafana.anajak-khmer.site
      secretName: kube-stack-new-tls
  rules: 
    # - host: prometheus.devnerd.store
    #   http:
    #     paths: 
    #       - pathType: Prefix 
    #         path: "/"
    #         backend: 
    #           service: 
    #             name: monitor-stack-release-kube-prometheus
    #             port: 
    #               number: 9090
    - host: grafana.anajak-khmer.site
      http:
        paths: 
          - pathType: Prefix 
            path: "/"
            backend: 
              service: 
                name: monitor-stack-release-grafana 
                port: 
                  number: 80
